[gd_scene load_steps=11 format=3 uid="uid://c3a185jh8l2rs"]

[ext_resource type="Script" path="res://passive items/shields/scripts/shield.gd" id="1_60u6d"]
[ext_resource type="Script" path="res://Components/Scripts/health_component.gd" id="2_2sflt"]
[ext_resource type="Script" path="res://Components/Scripts/hitbox_component.gd" id="3_amud8"]
[ext_resource type="Texture2D" uid="uid://drluxf5s35lqe" path="res://Assets/weapons/items/shieldoverlay-Sheet.png" id="4_3d05n"]
[ext_resource type="Texture2D" uid="uid://cyy46ekrlfctr" path="res://Assets/icons/shieldbar.png" id="5_lx3wj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x2f41"]
radius = 23.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3hd4b"]
atlas = ExtResource("4_3d05n")
region = Rect2(0, 0, 50, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg34h"]
atlas = ExtResource("4_3d05n")
region = Rect2(50, 0, 50, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s0e8"]
atlas = ExtResource("4_3d05n")
region = Rect2(100, 0, 50, 47)

[sub_resource type="SpriteFrames" id="SpriteFrames_s0p1a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hd4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg34h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s0e8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="shield" type="Node2D" node_paths=PackedStringArray("shield_health", "shield_hb", "shield_recharge_time", "animated_sprite")]
script = ExtResource("1_60u6d")
shield_health = NodePath("HealthComponent")
shield_hb = NodePath("HitboxComponent")
ShieldHPStatus = 1
shield_recharge_time = NodePath("Timer")
animated_sprite = NodePath("AnimatedSprite2D")
shield_type_number = 1

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_2sflt")
max_health = 125.0
health = 125.0

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("collision_shape", "health_component")]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_amud8")
collision_shape = NodePath("CollisionShape2D")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_x2f41")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_s0p1a")
autoplay = "default"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hpui" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchor_left = 0.41
anchor_top = 0.921
anchor_right = 0.59
anchor_bottom = 0.992
offset_left = 0.179962
offset_top = 0.191956
offset_right = 0.179993
offset_bottom = 5.18396
grow_horizontal = 2
grow_vertical = 0

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/hpui"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.698039)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.289
anchor_top = -1.072
anchor_right = -0.135
anchor_bottom = 0.879
offset_left = 63.823
offset_top = 14.672
offset_right = 431.945
offset_bottom = -31.829
grow_horizontal = 2
grow_vertical = 2
texture_progress = ExtResource("5_lx3wj")

[connection signal="IDIED" from="HealthComponent" to="." method="_on_health_component_idied"]
[connection signal="area_entered" from="HitboxComponent" to="HitboxComponent" method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
